# internal/dto/request.go
@@ -1,19 +1,20 @@
 package dto
 
-import "library-project/internal/models"
-
 // Auth Requests
 type RegisterRequest struct {
-	Email     string            `json:"email" binding:"required,email"`
-	Password  string            `json:"password" binding:"required,min=6"`
-	FirstName string            `json:"first_name" binding:"required"`
-	LastName  string            `json:"last_name" binding:"required"`
-	Role      models.UserRole   `json:"role" binding:"required,oneof=owner member"`
+	Email     string `json:"email" binding:"required,email"`
+	Password  string `json:"password" binding:"required,min=6"`
+	FirstName string `json:"first_name" binding:"required"`
+	LastName  string `json:"last_name" binding:"required"`
 }
 
 type LoginRequest struct {
 	Email    string `json:"email" binding:"required,email"`
 	Password string `json:"password" binding:"required"`
+}
+
+type RefreshTokenRequest struct {
+	RefreshToken string `json:"refresh_token" binding:"required"`
 }
 
 // Book Requests
